<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_base_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="center_vertical"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/add_base_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="20dip" >

        <TextView
            android:id="@+id/add_base_form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_base_form_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageView
            android:id="@+id/add_base_form_location_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/add_base_image_content_description"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />

        <EditText
            android:id="@+id/add_base_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_base_name_hint"
            android:inputType="textPersonName"
            android:text="@string/add_base_name_default" />

        <Button
            android:id="@+id/add_base_form_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_base_form_submit" />
    </LinearLayout>

</LinearLayout>